--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "crypto-es": "^2.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.23.0",
@@ -55,7 +57,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "dotenv-webpack": "^8.0.1",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19"
+  },
+  "browser": {
+    "crypto": false,
+    "os": false
   }
 }
