--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
