--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "crypto-es": "^2.1.0",
     "dotenv": "^16.3.1",
