--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # Development
-REACT_APP_API_URL=http://localhost:3001
+# REACT_APP_API_URL=http://localhost:3001
+
+# Production
+REACT_APP_API_URL=https://backend-swastik.onrender.com
