--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "shoppy-dashboard",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://admin.swastikcredit.in/",
     "dependencies": {
         "@react-pdf/renderer": "^3.1.14",
         "@syncfusion/ej2": "^19.4.48",
