--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-pdf": "^7.5.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-signature-canvas": "^1.0.6",
         "react-to-print": "^2.14.15",
         "recharts": "^2.10.3",
         "uuid": "^9.0.1"
