--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-datepicker": "^4.23.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.3.1",
+        "react-modal": "^3.16.1",
         "react-pdf": "^7.5.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
