--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
         "file-saver": "^2.0.5",
+        "fs": "^0.0.1-security",
         "html2canvas": "^1.4.1",
+        "image-to-base64": "^2.2.0",
         "jsonwebtoken": "^9.0.2",
-        "jspdf": "^2.5.1",
+        "jspdf": "^1.4.1",
         "moment": "^2.29.4",
         "mongoose": "^8.0.2",
         "multer": "^1.4.5-lts.1",
