Changed to Production Build

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# Development
-REACT_APP_API_URL=http://localhost:3001
-REACT_APP_FRONT_URL=http://localhost:3000
+# # Development
+# REACT_APP_API_URL=http://localhost:3001
+# REACT_APP_FRONT_URL=http://localhost:3000
 
-# # Production
-# REACT_APP_API_URL=https://backend-swastik.onrender.com
-# REACT_APP_FRONT_URL=https://admin.swastikcredit.in
+# Production
+REACT_APP_API_URL=https://backend-swastik.onrender.com
+REACT_APP_FRONT_URL=https://admin.swastikcredit.in
