--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 # REACT_APP_FRONT_URL=http://localhost:3000
 
 # Production
-REACT_APP_API_URL=https://backend-swastik.onrender.com
+REACT_APP_API_URL=https://backend-swastik-o0rm.onrender.com
 REACT_APP_FRONT_URL=https://admin.swastikcredit.in
